--- a/themes/rhino3d.com-theme/assets/scss/_override.scss
+++ b/themes/rhino3d.com-theme/assets/scss/_override.scss
@@ -267,3 +267,13 @@ td.hljs-ln-line.hljs-ln-code {
 .grid-width {
 	width: auto;
 }
+
+/* 
+####################################################################
+# (Back)Tick (Back)Tick code styling
+####################################################################
+*/
+code {
+  background-color: rgb(248, 248, 248); 
+  color: rgb(0, 92, 197);
+}
