--- a/themes/rhino3d.com-theme/assets/scss/_override.scss
+++ b/themes/rhino3d.com-theme/assets/scss/_override.scss
@@ -268,12 +268,19 @@ td.hljs-ln-line.hljs-ln-code {
 	width: auto;
 }
 
+
 /* 
 ####################################################################
 # (Back)Tick (Back)Tick code styling
 ####################################################################
 */
 code {
-  background-color: rgb(248, 248, 248); 
-  color: rgb(0, 92, 197);
+  background-color: rgb(246, 246, 246);
+  border-color: rgb(219,219,219);
+  border-radius: 2px;
+  border-width: 1px;
+  border-style: solid;
+  padding: 1px 3px 1px 3px; 
+  color: rgb(211, 49, 93);
+  font-size: 0.85em;
 }
